k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mercadol-pithing
  labels:
    name: mercadol-pithing
    app: mercadol-pithing
