k8s/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: mercadol-pithing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:latest
        ports:
        - containerPort: 16686
        - containerPort: 14268
        - containerPort: 14250
        volumeMounts:
        - name: jaeger-storage
          mountPath: /tmp
      volumes:
      - name: jaeger-storage
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: mercadol-pithing
spec:
  selector:
    app: jaeger
  ports:
  - name: web
    port: 16686
    targetPort: 16686
  - name: otlp
    port: 14268
    targetPort: 14268
  - name: otlp-grpc
    port: 14250
    targetPort: 14250
  type: ClusterIP
