k8s/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: mercadol-pithing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        ports:
        - containerPort: 9000
        - containerPort: 9001
        command:
        - server
        - /data
        - --console-address
        - ":9001"
        volumeMounts:
        - name: minio-storage
          mountPath: /data
      volumes:
      - name: minio-storage
        persistentVolumeClaim:
          claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: mercadol-pithing
spec:
  selector:
    app: minio
  ports:
  - port: 9000
    targetPort: 9000
  - port: 9001
    targetPort: 9001
  type: ClusterIP
